--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ li a {
     margin-top: 20%;
     flex-direction: column;
     align-items: center;
-    color: #a5f8d8;
+    color: #14b477;
 }
 
 .onlyIndexDiv h1 {
